# dynamodb-ack-helm-pynamodb-demo

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/files/: dynamodb-tables.json
chart/templates/: dynamodb-tables.yaml
src/demo/: dev_migrate.py  gen_ack_tables.py  introspect.py  pynamodb_settings.py  queries.py
src/demo/app/: consts.py  dynamodb.py  models.py  queries.py  schemas.py
src/demo/scripts/: dev_migrate.py  gen_ack_tables.py  models.py
